Fixed small css issue, causing extra space to occur.
Changed html,body css to overflow: hidden to remove extra space causing a scroll bar to appear.

--- a/src/main/resources/static/css/profile.css
+++ b/src/main/resources/static/css/profile.css
@@ -2,9 +2,11 @@ body {
     height: 100%;
     margin: 0px;
     background-color: blanchedalmond;
+    overflow: hidden;
  }
  html{
-     height: 100%;
+    height: 100%;
+    overflow: hidden;
  }
  
  .flex-container1{
@@ -34,15 +36,14 @@ body {
     align-items: center;
     flex-direction: column;
     min-height: 100vh;
+    color: rgb(38,0,77);
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
 
-}
-.main-content-div{
-    
-}
 
 .sidebar{ 
     flex: 0 0 200px;    
-    height: 100vh;    
+    height: 100%;    
     position: relative;
     background-color: rgb(38,0,77);    
     color: antiquewhite;
@@ -57,10 +58,11 @@ body {
 }
 .footer{
     flex: 1;
-    height: 30px;
-    
+    height: 30px;    
     position: absolute;
     bottom: 0;
+    margin-bottom: 20px;
+    
 }
 
 
